# notes

./: .gitignore  .gitmodules  .travis.yml  Dev Tools Checklist.md  Dev-Tools-Checklist.md  Keyboard-Shortcuts.md  README.md  awesome-website.md  commit.sh
Algorithms/: circular_counter.md  flatten.md  garage.md  t.go
Algorithms/leetcode/: 1-two-sum.md  100-same-tree.md  101-symmetric-tree.md  104-maximum-depth-of-binary-tree.md  107-binary-tree-level-order-traversal-ii.md  108-convert-sorted-array-to-binary-search-tree.md  110-balanced-binary-tree.md  112-path-sum.md  118-pascals-triangle.md  119-pascals-triangle-ii.md  121-best-time-to-buy-and-sell-stock.md  122-best-time-to-buy-and-sell-stock-ii.md  125-valid-palindrome.md  136-single-number.md  14-longest-common-prefix.md  155-min-stack.md  168-excel-sheet-column-title.md  (+67 more)
Database/: w3schools_sql_tutorial.md
Go/: 2-how-to-write-go-code.md  3-The-Go-Programming-Language-Specification.md
Language/Rust/code/: Cargo.toml
Language/Rust/code/src/03-common-programming-concepts/: main.rs
Language/Rust/code/src/04-understanding-ownership/: main.rs
Language/Rust/code/src/05-structs/: main.rs
Language/Rust/code/src/06-enums/: main.rs
Language/Rust/code/src/ch02-00-guessing-game-tutorial/: main.rc  main.rs
Language/Rust/code/src/common-programming-concepts/: main.rs
Network/: rfc2616.md
Ocaml/: 1-install.md  2-a_guide_tour.md  3-variables_and_functions.md  99problems.md
Tool/: install.sh
Unix/: LearnBash.sh  bash_params.sh
python/: BinaryData.py  BuildInConstants.py  BuildInFunctions.py
(+188 files in other folders)
