[package]
name = "code"
version = "0.1.0"
authors = ["Chyroc <chen_yunpeng@foxmail.com>"]

[dependencies]
rand = "0.5"

[[bin]]
name = "02-guessing-game-tutorial"
path = "src/02-guessing-game-tutorial/main.rs"

[[bin]]
name = "03-common-programming-concepts"
path = "src/03-common-programming-concepts/main.rs"

[[bin]]
name = "04-understanding-ownership"
path = "src/04-understanding-ownership/main.rs"
